logs/dag_id=rand_user/run_id=manual__2023-11-22T05:23:20.697419+00:00/task_id=store_user/attempt=3.log
[2023-11-22T05:25:37.539+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: rand_user.store_user manual__2023-11-22T05:23:20.697419+00:00 [queued]>
[2023-11-22T05:25:37.568+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: rand_user.store_user manual__2023-11-22T05:23:20.697419+00:00 [queued]>
[2023-11-22T05:25:37.568+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-11-22T05:25:37.569+0000] {taskinstance.py:1363} INFO - Starting attempt 3 of 3
[2023-11-22T05:25:37.571+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-11-22T05:25:37.609+0000] {taskinstance.py:1383} INFO - Executing <Task(PythonOperator): store_user> on 2023-11-22 05:23:20.697419+00:00
[2023-11-22T05:25:37.624+0000] {standard_task_runner.py:55} INFO - Started process 5250 to run task
[2023-11-22T05:25:37.634+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'rand_user', 'store_user', 'manual__2023-11-22T05:23:20.697419+00:00', '--job-id', '656', '--raw', '--subdir', 'DAGS_FOLDER/predictions.py', '--cfg-path', '/tmp/tmpvs3qblza']
[2023-11-22T05:25:37.639+0000] {standard_task_runner.py:83} INFO - Job 656: Subtask store_user
[2023-11-22T05:25:37.777+0000] {task_command.py:376} INFO - Running <TaskInstance: rand_user.store_user manual__2023-11-22T05:23:20.697419+00:00 [running]> on host 91f7624ceef9
[2023-11-22T05:25:37.920+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=Gaurav
AIRFLOW_CTX_DAG_ID=rand_user
AIRFLOW_CTX_TASK_ID=store_user
AIRFLOW_CTX_EXECUTION_DATE=2023-11-22T05:23:20.697419+00:00
AIRFLOW_CTX_TRY_NUMBER=3
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-11-22T05:23:20.697419+00:00
[2023-11-22T05:25:37.922+0000] {postgres.py:129} INFO - Running copy expert: COPY rand_users(uuid, title, firstname, lastname, gender, country, username, password, email, age) FROM stdin WITH DELIMITER as ',' DEFAULT 'N/A', filename: /tmp/processed_user.csv
[2023-11-22T05:25:37.938+0000] {base.py:71} INFO - Using connection ID 'postgres' for task execution.
[2023-11-22T05:25:37.946+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 193, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/predictions.py", line 41, in _store_user
    filename='/tmp/processed_user.csv'
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/hooks/postgres.py", line 137, in copy_expert
    cur.copy_expert(sql, file)
psycopg2.errors.SyntaxError: syntax error at or near "DEFAULT"
LINE 1: ...ord, email, age) FROM stdin WITH DELIMITER as ',' DEFAULT 'N...
                                                             ^

[2023-11-22T05:25:37.962+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=rand_user, task_id=store_user, execution_date=20231122T052320, start_date=20231122T052537, end_date=20231122T052537
[2023-11-22T05:25:37.985+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 656 for task store_user (syntax error at or near "DEFAULT"
LINE 1: ...ord, email, age) FROM stdin WITH DELIMITER as ',' DEFAULT 'N...
                                                             ^
; 5250)
[2023-11-22T05:25:38.006+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-11-22T05:25:38.057+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
